--- a/index.css
+++ b/index.css
@@ -1,41 +1,41 @@
 .top-left {
-    height: 35vh;
-    width: 20vw;
+    height: 23vh;
+    width: 15vw;
     margin-bottom: 19%;
 }
 
 .top-right {
-    height: 35vh;
-    width: 20vw;
+    height: 23vh;
+    width: 15vw;
     margin-bottom: 19%;
-    margin-left: 59%;
+    margin-left: 69%;
 }
 
 .flex-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: -33%;
+    margin-top: -31%;
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 5.5rem;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-top: -3%;
 }
 
 .line {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 5%;
 }
 
 .name-line {
     color: red;
-    width: 35vw;
-    margin-top: 8%
+    width: 45vw;
+    margin-top: -3%
 }
 
 .line2 {
@@ -45,11 +45,51 @@ h2 {
 
 .recieved-from {
    color: black;
-    width: 20vw;
+    width: 30vw;
    margin-top: 5%;
 }
 
 .line3 {
     font-size: 1.5rem;
     margin-top: -0.2%;
+}
+
+img {
+    height: 20vh;
+}
+
+#left {
+    margin-left: -230%;
+}
+
+#right {
+    margin-left: 230%;
+}
+
+.row{ 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.bottom-left {
+    height: 23vh;
+    width: 15vw;
+   
+}
+
+.bottom {
+    height: 23vh;
+    width: 15vw;
+    margin-left: 69%;
+    
+}
+
+#name1 {
+    border: none;
+    height: 8vh;
+    width: 40vw;
+    text-align: center;
+    margin-left: 5%;
+    font-size: 5rem;
 }
