--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
     margin-left: 69%;
 }
 
-.flex-wrapper {
+.pageone {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,6 +102,49 @@ img {
     font-size: 3rem;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.contianer {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.pages {
+  display: flex;
+  width: 300%;
+  box-sizing: border-box;
+}
+
+.page{
+  width: 100%;
+  height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: all 1s;
+}
+
+.one{
+  background-color: red;
+}
+
+.two {
+  background-color: orange;
+}
+
+.three {
+  background-color: brown;
+}
+
+.four {
+  background-color: black;
+}
 
 /* start of second page */
 
