--- a/index.css
+++ b/index.css
@@ -1,121 +1,22 @@
-.top-left {
-    height: 23vh;
-    width: 15vw;
-    margin-bottom: 19%;
-}
-
-.top-right {
-    height: 23vh;
-    width: 15vw;
-    margin-bottom: 19%;
-    margin-left: 69%;
-}
-
-.pageone {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: -31%;
-}
-
-h1 {
-    font-size: 5.5rem;
-}
-
-h2 {
-    font-size: 2rem;
-    margin-top: -3%;
-}
-
-.line {
-    font-size: 1.5rem;
-    margin-top: 3%;
-}
-
-.name-line {
-    color: red;
-    width: 45vw;
-    margin-top: 2%
-}
-
-.line2 {
-    font-size: 1.5rem;
-    margin-top: -0.1%;
-}
-
-.recieved-from {
-   color: black;
-    width: 30vw;
-   margin-top: 5%;
-}
-
-.line3 {
-    font-size: 1.5rem;
-    margin-top: -0.2%;
-}
-
-img {
-    height: 20vh;
-}
-
-#left {
-    margin-left: -230%;
-}
-
-#right {
-    margin-left: 230%;
-}
-
-.row{ 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.bottom-left {
-    height: 23vh;
-    width: 15vw;
-   
-}
-
-.bottom {
-    height: 23vh;
-    width: 15vw;
-    margin-left: 69%;
-}
-
-#name1 {
-    border: none;
-    height: 8vh;
-    width: 40vw;
-    text-align: center;
-    margin-left: 5%;
-    font-size: 5rem;
-}
-
-#name2 {
-    border: none;
-    height: 5vh;
-    width: 20vw;
-    text-align: center;
-    margin-left: 15%;
-    font-size: 3rem;
-}
 
 * {
   padding: 0;
   margin: 0;
 }
 
+body {
+  overflow: hidden;
+}
+
 .contianer {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .pages {
   display: flex;
-  width: 300%;
+  width: 400%;
   box-sizing: border-box;
 }
 
@@ -127,11 +28,12 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 10px;
   transition: all 1s;
 }
 
 .one{
-  background-color: red;
+  
 }
 
 .two {
@@ -143,72 +45,52 @@ img {
 }
 
 .four {
-  background-color: black;
+  background-color: violet;
 }
 
-/* start of second page */
 
-.vl {
-    border-left: 10vw solid #730202;
-    height: 49vw;
-    margin-left: 20%;
-  }
+/* start f page */
 
-  .ribbon {
-    height: 90vh;
-    margin-top: -50%;
-    margin-left: 5%;
-  }
+.top-left {
+  height: 35vh;
+}
 
-  img {
-    height: 2vh;
-  }
+.top-right {
+  height: 35vh;
+}
 
-  .row4 {
-    display: flex;
-    flex-direction: row;
-    margin-top: -50%;
-    margin-left: 60%;
-    justify-content: space-evenly;
-  }
-  
-  .row5 {
-    display: flex;
-    flex-direction: row;
-    margin-top: 2%;
-    margin-left: 60%;
-    justify-content: space-evenly;
-   
-  }
+.row {
+  display: flex;
+  gap: 1300px;
+  margin-top: 5%;
+}
 
-  .column {
-    flex-direction: column;
-    justify-content: flex-end;
-    margin-top: 3%;
-  }
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: -8%;
+}
 
-  .row6 {
-    margin-top: 6%;
-    display: flex;
-    flex-direction: row;
-  }
+h1 {
+  font-size: 5rem;
+}
 
-  #c4 {
-    margin-left: 3%;
-  }
-  #c3 {
-    margin-left: 3%;
-  }
-  #c2 {
-    margin-left: 3%;
-  }
-  #c1 {
-    margin-left: 3%;
-  }
+h2 {
+  font-size: 3rem;
+}
 
-  .row7 {
-    margin-top: 3%;
-    display: flex;
-    flex-direction: row;
-  }
+.text {
+margin-top: 10%;
+font-size: 1.5rem;
+}
 
+.line1 {
+  width: 50vw;
+  margin-top: 5%;
+}
+
+#textbox1 {
+  margin-top: 7%;
+}
