--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .contianer {
@@ -36,9 +36,7 @@ body {
   
 }
 
-.two {
-  background-color: orange;
-}
+
 
 .three {
   background-color: brown;
@@ -49,20 +47,34 @@ body {
 }
 
 
-/* start f page */
+/* second page  */
 
 .top-left {
-  height: 35vh;
+  height: 30vh;
 }
 
 .top-right {
-  height: 35vh;
+  height: 30vh;
+}
+
+.bottom-left {
+  height: 30vh;
+}
+
+.bottom-right {
+  height: 30vh;
 }
 
 .row {
   display: flex;
   gap: 1300px;
-  margin-top: 5%;
+  margin-top: 1%;
+}
+
+.row2 {
+  display: flex;
+  gap: 1300px;
+  margin-top: -5%;
 }
 
 .column {
@@ -88,9 +100,99 @@ font-size: 1.5rem;
 
 .line1 {
   width: 50vw;
-  margin-top: 5%;
+  margin-top: -30%;
 }
 
 #textbox1 {
   margin-top: 7%;
 }
+
+#textbox5 {
+  margin-left: 15%;
+  width: 35vw;
+  height: 10vh;
+  font-size: 3rem;
+  text-align: center;
+  border: none;
+}
+
+.under {
+  margin-top: 2%;
+  font-size: 1.5rem;
+}
+
+.line2 {
+  margin-top: 8%;
+  width: 35vw;
+}
+
+
+
+#textbox6 {
+  width: 25vw;
+  height: 6vh;
+  text-align: center;
+  margin-left: 13%;
+  border: none;
+  font-size: 2vh;
+}
+
+.under-second {
+  margin-top: 2%;
+  font-size: 1.5rem;
+}
+
+/* buttons */
+
+/* .pagebutton {
+  display: flex;
+  flex-direction: row;
+} */
+
+.img-left {
+  height: 15vh;
+  width: 15vw;
+}
+
+
+.continue-left {
+  width: 20vw;
+  height: 20vh;
+  border: none;
+  background-color: white;
+ margin-left: -210%;
+ margin-top: 20%;
+}
+
+.img-right {
+  height: 15vh;
+  width: 15vw;
+}
+
+
+.continue-right {
+  width: 20vw;
+  height: 20vh;
+  border: none;
+  background-color: white;
+  margin-left: 190%;
+  margin-top: -70%;
+}
+
+/* start of page 3 */
+
+img {
+  height: 15vh;
+}
+
+.i {
+  margin-left: -75%;
+}
+
+.i3 {
+  margin-left: 75%;
+  margin-top: -15%;
+}
+
+
+
