--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
 .contianer {
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .pages {
@@ -32,37 +32,37 @@ body {
   transition: all 1s;
 }
 
-.one{
-  
-}
 
 
 
-.three {
-  background-color: brown;
-}
+
 
 .four {
   background-color: violet;
 }
 
 
+
+/* start of page 1 */
+
+
+
 /* second page  */
 
 .top-left {
-  height: 30vh;
+  height: 27vh;
 }
 
 .top-right {
-  height: 30vh;
+  height: 27vh;
 }
 
 .bottom-left {
-  height: 30vh;
+  height: 27vh;
 }
 
 .bottom-right {
-  height: 30vh;
+  height: 27vh;
 }
 
 .row {
@@ -181,18 +181,92 @@ font-size: 1.5rem;
 
 /* start of page 3 */
 
-img {
-  height: 15vh;
+.three {
+  background-image: linear-gradient(#924BFF, #6461F9, #924BFF);
 }
 
 .i {
   margin-left: -75%;
+  margin-top: 1%;
+  height: 32vh;
+}
+
+.i2 {
+  height: 38vh;
+  margin-top: -20%;
 }
 
 .i3 {
+  margin-left: 75%;
+  margin-top: -17%;
+  height: 32vh;
+}
+
+.i4 {
+  height: 32vh;
+  margin-left: -75%;
+  margin-top: -15%;
+
+}
+.i5 {
+  height: 32vh;
   margin-left: 75%;
   margin-top: -15%;
 }
 
 
+.img-left2 {
+  height: 10vh;
+  width: 10vw;
+}
 
+.img-right2 {
+  height: 10vh;
+  width: 10vw;
+}
+
+.continue-left2 {
+  background-color: white;
+  border: none;
+}
+
+.continue-right2 {
+  background-color: white;
+  border: none;
+}
+
+h5 {
+  font-size: 6rem;
+  margin-top: -3%;
+}
+
+h6 {
+  font-size: 3.5rem;
+  margin-top: 5%;
+}
+
+.fortnitename {
+  width: 40vw;
+  margin-top:3%;
+}
+
+#textbox7 {
+  width: 25vw;
+  margin-left: 17%;
+  height: 8vh;
+  text-align: center;
+  font-size: 3.5rem;
+  border: none;
+  background-color: transparent;
+}
+
+.page3-under {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.continue-left2 {
+  margin-left: -300%;
+  margin-bottom: -50%;
+  background-color: transparent;
+}
